apps/firefly/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: firefly-prod
        app.kubernetes.io/component: cache
        app.kubernetes.io/part-of: firefly
    spec:
      securityContext:
        runAsUser: 11734
        runAsGroup: 11734
        fsGroup: 11734
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: docker.io/library/redis:8.10.2-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 11734
            runAsGroup: 11734
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              memory: "48Mi"
              cpu: "5m"
            limits:
              memory: "196Mi"
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}
