apps/firefly/firefly-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  ports:
    - port: 80
      targetPort: firefly
  selector:
    app.kubernetes.io/name: firefly
