apps/firefly/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
